[gd_scene load_steps=55 format=2]

[ext_resource path="res://assets/oak_woods_v1.0/character/char_blue_1.png" type="Texture" id=1]
[ext_resource path="res://characters/player.gd" type="Script" id=2]
[ext_resource path="res://audio/sword attack.mp3" type="AudioStream" id=3]
[ext_resource path="res://audio/life_pickup.mp3" type="AudioStream" id=4]
[ext_resource path="res://audio/death.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/dreaming.mp3" type="AudioStream" id=6]
[ext_resource path="res://audio/snore.mp3" type="AudioStream" id=7]
[ext_resource path="res://audio/suspense.mp3" type="AudioStream" id=8]
[ext_resource path="res://audio/background.mp3" type="AudioStream" id=9]
[ext_resource path="res://audio/coin.mp3" type="AudioStream" id=10]
[ext_resource path="res://audio/jump.wav" type="AudioStream" id=11]
[ext_resource path="res://audio/hurt.wav" type="AudioStream" id=12]
[ext_resource path="res://audio/cemetary.mp3" type="AudioStream" id=13]
[ext_resource path="res://audio/finalboss.mp3" type="AudioStream" id=14]
[ext_resource path="res://audio/skeletonbossDie.mp3" type="AudioStream" id=15]
[ext_resource path="res://audio/diamondCollect.mp3" type="AudioStream" id=16]
[ext_resource path="res://audio/cashCollect.mp3" type="AudioStream" id=17]
[ext_resource path="res://audio/level2background.mp3" type="AudioStream" id=18]
[ext_resource path="res://audio/portal.mp3" type="AudioStream" id=19]
[ext_resource path="res://audio/level3background.mp3" type="AudioStream" id=20]

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 9.44177, 4.5196 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.6827, 25.7597 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player/hitArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 0.6
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player/hitArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=33]
resource_name = "die"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59 ]
}

[sub_resource type="Animation" id=18]
resource_name = "fall"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=32]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=17]
resource_name = "jump"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=3]
resource_name = "run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=28]
resource_name = "sleeping"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 59, 59, 59, 59, 59, 59, 59, 59, 59, 59 ]
}

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "sleeping"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachine" id=6]
states/attack/node = SubResource( 9 )
states/attack/position = Vector2( 185, 247 )
states/die/node = SubResource( 37 )
states/die/position = Vector2( 385, 337.366 )
states/hurt/node = SubResource( 34 )
states/hurt/position = Vector2( 552, 277.366 )
states/idle/node = SubResource( 10 )
states/idle/position = Vector2( 426, 52 )
states/jump/node = SubResource( 20 )
states/jump/position = Vector2( 83, 91.0785 )
states/run/node = SubResource( 13 )
states/run/position = Vector2( 666, 187 )
states/sleeping/node = SubResource( 29 )
states/sleeping/position = Vector2( 783, 80.3658 )
transitions = [ "idle", "attack", SubResource( 11 ), "attack", "idle", SubResource( 12 ), "idle", "run", SubResource( 14 ), "run", "idle", SubResource( 15 ), "run", "attack", SubResource( 16 ), "idle", "jump", SubResource( 21 ), "run", "jump", SubResource( 24 ), "jump", "idle", SubResource( 25 ), "jump", "attack", SubResource( 27 ), "idle", "sleeping", SubResource( 30 ), "sleeping", "idle", SubResource( 31 ), "idle", "hurt", SubResource( 35 ), "hurt", "idle", SubResource( 36 ), "idle", "die", SubResource( 38 ) ]
start_node = "idle"
end_node = "die"
graph_offset = Vector2( 0, 32.3658 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=7]

[node name="player" type="KinematicBody2D" groups=["player"]]
scale = Vector2( 0.738599, 0.738599 )
script = ExtResource( 2 )

[node name="player" type="Sprite" parent="."]
scale = Vector2( 2.31321, 2.31321 )
texture = ExtResource( 1 )
hframes = 8
vframes = 11

[node name="hitArea" type="Area2D" parent="player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/hitArea"]
modulate = Color( 0.0784314, 0.00784314, 0.00784314, 1 )
position = Vector2( 16.7861, 8.47424 )
shape = SubResource( 26 )
disabled = true
one_way_collision_margin = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.3897, 23.0792 )
scale = Vector2( 1.45073, 1.45073 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 4 )
anims/die = SubResource( 33 )
anims/fall = SubResource( 18 )
anims/hurt = SubResource( 32 )
anims/idle = SubResource( 8 )
anims/jump = SubResource( 17 )
anims/run = SubResource( 3 )
anims/sleeping = SubResource( 28 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 6 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 7 )

[node name="attackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="lifeCollectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="deathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="dreamingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="snoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="suspenseMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="backgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0

[node name="coinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="jumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0

[node name="hurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0

[node name="cemetaryMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="finalBoss" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="deathSoundBoss" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )

[node name="diamondSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )

[node name="cashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )

[node name="backgroundMusic2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )
volume_db = -10.0

[node name="portal" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 19 )

[node name="backgroundMusic3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )
volume_db = -10.0

[connection signal="area_entered" from="player/hitArea" to="." method="_on_hitArea_area_entered"]
[connection signal="body_entered" from="player/hitArea" to="." method="_on_hitArea_body_entered"]
